<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginRight="15dp"
    android:background="@color/whiteCardColor"
    android:layout_marginLeft="15dp"
    android:padding="15dp">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/resend_verification_email"
        android:textSize="21sp"
        android:textColor="@color/colorPrimary"
        android:id="@+id/dialogTitle"/>

    <EditText
        android:id="@+id/confirm_email"
        android:hint="@string/login_email_hint"
        style="@style/modifiedEditText"
        android:inputType="textEmailAddress" />

    <EditText
        android:id="@+id/confirm_password"
        style="@style/modifiedEditText"
        android:hint="@string/login_password_hint"
        android:maxLines="1"
        android:inputType="textPassword"/>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="15sp"
            android:textColor="@color/primaryTextColor"
            android:text="@string/cancel"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"
            android:id="@+id/dialogCancel"
            android:layout_marginRight="10dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="15sp"
            android:textColor="@color/primaryTextColor"
            android:text="@string/confirm"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="30dp"
            android:layout_marginStart="10dp"
            android:layout_marginBottom="10dp"
            android:id="@+id/dialogConfirm"
            android:layout_alignParentRight="true"
            android:layout_marginLeft="10dp" />

    </RelativeLayout>

</LinearLayout>