<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    style="@style/loginCard"
    app:cardCornerRadius="@dimen/loginCardRadius"
    android:elevation="5dp"
    android:layout_gravity="center"
    android:layout_marginTop="@dimen/loginViewsMargin"
    android:layout_marginBottom="@dimen/loginViewsMargin"
    android:background="@color/whiteCardColor">

    <LinearLayout
        style="@style/linearParent"
        android:layout_gravity="center"
        android:padding="@dimen/loginViewsMargin">

        <com.google.android.material.textfield.TextInputEditText
            style="@style/headerTextPrimary"
            android:text="@string/register"
            android:layout_marginTop="@dimen/loginViewsMargin"/>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayoutFirstName"
            style="@style/parent"
            android:layout_marginTop="@dimen/signup_text_margin_top">
            <com.google.android.material.textfield.TextInputEditText
                style="@style/modifiedEditText"
                android:inputType="text"
                android:maxLines="1"
                android:id="@+id/editText_firstName"
                android:hint="FirstName"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayoutLastName"
            style="@style/parent"
            android:layout_marginTop="@dimen/signup_text_margin_top">
            <com.google.android.material.textfield.TextInputEditText
                style="@style/modifiedEditText"
                android:id="@+id/editText_lastName"
                android:inputType="text"
                android:maxLines="1"
                android:hint="LastName"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayoutEmailAddress"
            style="@style/parent"
            android:layout_marginTop="@dimen/signup_text_margin_top">
            <com.google.android.material.textfield.TextInputEditText
                style="@style/modifiedEditText"
                android:id="@+id/editText_EmailAddress"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:hint="@string/login_email_hint"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayoutContactNo"
            style="@style/parent"
            android:layout_marginTop="@dimen/signup_text_margin_top">
            <com.google.android.material.textfield.TextInputEditText
                style="@style/modifiedEditText"
                android:id="@+id/editText_ContactNo"
                android:inputType="text"
                android:maxLines="1"
                android:hint="Contact Number"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayoutUserName"
            style="@style/parent"
            android:layout_marginTop="@dimen/signup_text_margin_top">
            <com.google.android.material.textfield.TextInputEditText
                style="@style/modifiedEditText"
                android:id="@+id/editText_UserName"
                android:inputType="text"
                android:maxLines="1"
                android:hint="User Name"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayoutPassword"
            style="@style/parent"
            android:layout_marginTop="@dimen/signup_text_margin_top">
            <com.google.android.material.textfield.TextInputEditText
                style="@style/modifiedEditText"
                android:id="@+id/editText_password"
                android:hint="@string/login_password_hint"
                android:maxLines="1"
                android:inputType="textPassword"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayoutConfirmPasssword"
            style="@style/parent"
            android:layout_marginTop="@dimen/signup_text_margin_top">
            <com.google.android.material.textfield.TextInputEditText
                style="@style/modifiedEditText"
                android:id="@+id/editText_confirmPassword"
                android:hint="@string/login_confirm_password_hint"
                android:maxLines="1"
                android:inputType="textPassword"/>
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            style="@style/loginButton"
            android:id="@+id/btn_login"
            android:layout_gravity="center"
            android:text="Register" />

        <TextView
            style="@style/parent"
            android:id="@+id/txtView_registerLink"
            android:textAlignment="center"
            android:textStyle="bold"
            android:textColor="@color/primaryTextColor"
            android:text="@string/signup_login_hint"
            android:layout_marginTop="@dimen/loginViewsMargin"
            android:gravity="center_horizontal" />

    </LinearLayout>

</androidx.cardview.widget.CardView>
